syntax = "proto3";

package helloworld;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";

service TestApi {
  rpc Version(TestReq) returns (TestApiOutput){
    option (google.api.http) = {
      post: "/v1/example/version"
      body: "*"
    };
  }
  rpc VersionTest(TestReq) returns (TestApiOutput){
    option (google.api.http) = {
      post: "/v1/example/versiontest"
      body: "*"
    };
  }
}

service TestApiV2 {
  rpc Version(TestReq) returns (TestApiOutput){
    option (google.api.http) = {
      post: "/v2/example/version"
      body: "*"
    };
  }
  rpc VersionTest(TestReq) returns (TestApiOutput){
    option (google.api.http) = {
      post: "/v2/example/versiontest"
      body: "*"
    };
  }
}

message TestReq {
  string input = 1 [(gogoproto.jsontag) = "input"];
}

message TestApiData {
  string version = 1 [(gogoproto.jsontag) = "ApiVer"];
  string srvVersion = 2 [(gogoproto.jsontag) = "SrvVer"];
}

message TestApiOutput {
  int32 code = 1 [(gogoproto.jsontag) = "code"];
  string msg = 2 [(gogoproto.jsontag) = "msg"];
  int64 nowTime = 3 [(gogoproto.jsontag) = "nowTime"];
  TestApiData data = 4 [(gogoproto.jsontag) = "data"];
}